# rizz

./: .gitignore  .gitmodules  CMakeLists.txt  generateprojects.bat  opensln.bat
examples/02-quad/: quad.c
examples/11-ecs/: ecs.c  ecs.cpp
examples/assets/shaders/hlsl/: cs.comp.sgs  cs.sgs  drawsprite.sgs  quad.sgs  sdf.sgs
other_examples/: CMakeLists.txt
other_examples/11-ecs/: ecs.c  ecsstuff.cpp
other_examples/12-tf/: observer.cpp  simple.cpp  tf.c
playground/: CMakeLists.txt
playground/assets/shaders/hlsl/: cs.comp.sgs  cs.sgs  ecsminigame.sgs  gdr.comp.sgs  gdr.sgs  gdr2.comp.sgs
playground/pg-cs/: cs.c  quad.comp
playground/pg-ecs/: buffering.h  ecs.c  ecsstuff.cpp
playground/pg-ecsminigame/: application.c  ecsgame.cpp  ecsminigame.frag  ecsminigame.ps  ecsminigame.vert  ecsminigame.vs  game.cpp  game.h
playground/pg-gdr/: gdr.c  gdr.comp
playground/pg-tf/: parallel_for.cpp  simple.cpp  tf.c
playground/sandbox/: sandbox.c
